--- a/2.html
+++ b/2.html
@@ -9983,7 +9983,7 @@ h6,
                     <p class="text-muted">Unidad 1</p>
                     <p>Aprende cómo funciona tu cerebro y mejora tu aprendizaje con este video.</p>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="embed-responsive-item" src="unidad2.mp4" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=_KOPB2NmFUU" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -10001,18 +10001,17 @@ h6,
             </div>
 
 
-                    <!-- Video 3 -->
+              <!-- Video 1 -->
             <div class="col-lg-4 col-md-6 col-sm-12 pb-3">
                 <div class="bg-white mb-4 p-3 text-center">
-                    <h5>Innovación Educativa Global</h5>
-                    <p class="text-muted">Unidad 3</p>
-                    <p>Descubre nuevas metodologías y tendencias educativas alrededor del mundo.</p>
+                    <h5>La Neurociencia del Aprendizaje</h5>
+                    <p class="text-muted">Unidad 2</p>
+                    <p>Aprende cómo funciona tu cerebro y mejora tu aprendizaje con este video.</p>
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe class="https://www.youtube.com/watch?v=_KOPB2NmFUU" allowfullscreen></iframe>
+                        <iframe class="embed-responsive-item" src="https://www.youtube.com/watch?v=_KOPB2NmFUU" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
-
 
         
 
@@ -10073,4 +10072,5 @@ h6,
 </body>
 
 </html>
+
 
